[package]
name = "rlox_repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlox_interpreter = { path = "../rlox_interpreter" }
rlox_parser = { path = "../rlox_parser" }
rlox_syntax = { path = "../rlox_syntax" }
anyhow = { workspace = true }